add_library(pythia64
pyxkfl.f       pyname.f      pygram.f    pyrvne.f
pyspen.f       pyptis.f      pycomp.f    pyevol.f
pytbhb.f       pytest.f      pygrvl.f    pycteq.f
py4jet.f       pyr.f         ssmssm.f    fhsetflags.f
pyxtot.f       pyrnmq.f      pyrvgw.f    pymihg.f
py6frm.f       pymign.f      pygbeh.f    pythrg.f
pyxdin.f       pysfdc.f      pygrvs.f    pycba2.f
pyevnw.f       pyxxga.f      pyx4jt.f    pystbh.f
pytbdy.f       pyrand.f      pydump.f    py4ent.f
pyplot.f       pyevwt.f      pyinbm.f    pyrobo.f
pyangl.f       pylamf.f      pybook.f    pyldcm.f
pycmq2.f       pynull.f      pypdfu.f    pytime.f
pyct5m.f       pyupda.f      pyzdis.f    pymrun.f
pyrvgl.f       pysubh.f      pyptfs.f    pysghf.f
pycttr.f       pyalem.f      pyhext.f    pyfeyn.f
pytbhs.f       pyrget.f      pyklim.f    pyfram.f
pyct5l.f       pytbbn.f      pygrvw.f    pygrvm.f
upinit.f       pyhist.f      pynjdc.f    pyclus.f
pybksb.f       pyupin.f      pythru.f    PythiaHermes.switch.f
py4jts.f       pyevnt.f      pyfint.f    pytecm.f
pyrnm3.f       pyptdi.f      pyuedc.f    pyeevt.f
pytbbc.f       pyfact.f      pygive.f    pyrghm.f
pyx2xg.f       pyedit.f      pyresd.f    pypole.f
pysigh.f       pypdpo.f      pyonia.f    pysimp.f
pymaxi.f       pycjdc.f      pypile.f    pyoper.f
pyxtee.f       pyshow.f      pyrvs.f     pyjmas.f
py2ent.f       pysgsu.f      pyfill.f    pytune.f
pypdpr.f       pyrvg4.f      pyinre.f    pywaux.f
pyi3au.f       sugra.f       pynmes.f    pyrvi1.f
pyslha.f       pyhggm.f      pykfin.f    pythag.f
upevnt.f       pysghg.f      pyjoin.f    pyofsh.f
pyinpr.f       pyinom.f      pyxdif.f    pygrvd.f
pyrvsf.f       pyeig4.f      pypdga.f    pysgqc.f
pystop.f       pyapps.f      pyptmi.f    pysave.f
pygau2.f       pyrvch.f      pyonof.f    pylogo.f
pystrf_modif.f pypdfl.f      pytbhg.f    pylist.f
pymemx.f       structp.f     pyp.f       pymihk.f
pyglui.f       pyxxz6.f      pyh2xx.f    pyboei.f
pyupev.f       pychge.f      pymewt.f    pyk.f
pypdel.f       pykfdi.f      pywidx.f    pymsin.f
pygdir.f       pyscat.f      pydisg.f    pytaud.f
pyupre.f       fhsetpara.f   pytabu.f    structm.f
pygaus.f       pydecy.f      pyexec.f    pydata.f
pyfscr.f       pycdiv.f      pyxued.f    pydocu.f
visaje.f       pysphe.f      pyhepc.f    pysspa.f
pycell.f       pymael.f      pygrvv.f    upveto.f
pypcmp.f       pykcut.f      pyprep.f    pyqqbh.f
pyrvg2.f       py1ent.f      pystrf.f    pygaga.f
pyadsh.f       pymirm.f      pygamm.f    pymass.f
pyerrm.f       pyveto.f      pycsrt.f    pyxjet.f
pyalps.f       py4frm.f      pycbal.f    pyggam.f
pyjurf.f       pysugi.f      pylhef.f    pyradk.f
pyrvi3.f       pymult.f      pyrvr.f     pygraw.f
pycmqr.f       pykmap.f      pycrth.f    py3ent.f
pyrvsb.f       fhhiggscorr.f pygfxx.f    pydcyk.f
py4jtw.f       pysgex.f      pyrvg3.f    pyindf.f
pystat.f       pyfisb.f      pybesq.f    pyx3jt.f
pyinki.f       pyx2xh.f      pywidt.f    pysgtc.f
py2frm.f       pyrvg1.f      pywdkk.f    pyspli.f
pyremn.f       pygano.f      pyreco.f    pyhfth.f
pypdpi.f       pytbhq.f      pysgwz.f    pygvmd.f
pyinit.f       pdfset.f      pyckbd.f    pyrvi2.f
pyfowo.f       pyeicg.f      pyrset.f    pyfcmp.f
pydiff.f
)